openfaas/faas-idler-dep.yml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-idler
  namespace: "openfaas"
  labels:
    app: openfaas
    component: faas-idler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-idler
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: faas-idler
    spec:
      imagePullSecrets:
      - name: alihangzhou
      containers:
        - name: faas-idler
          resources:
            requests:
              memory: 64Mi
            
          image: registry.cn-hangzhou.aliyuncs.com/byzanteam/faas-idler:0.3.0
          imagePullPolicy: Always
          command:
            - /home/app/faas-idler
            - -dry-run=true
          volumeMounts:
            - name: auth
              readOnly: true
              mountPath: "/var/secrets/"
      volumes:
        - name: auth
          secret:
            secretName: basic-auth
      nodeSelector:
        beta.kubernetes.io/arch: amd64
