openfaas/gateway-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openfaas
    component: gateway
  name: gateway
  namespace: "openfaas"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "8082"
      labels:
        app: gateway
    spec:
      serviceAccountName: openfaas-controller
      volumes:
      - name: faas-netes-temp-volume
        emptyDir: {}
      - name: auth
        secret:
          secretName: basic-auth
      imagePullSecrets:
      - name: alihangzhou
      containers:
      - name: gateway
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: registry.cn-hangzhou.aliyuncs.com/byzanteam/gateway:0.18.17
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 5
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      - name: faas-netes
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: openfaas/faas-netes:0.10.5
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
        volumeMounts:
        - mountPath: /tmp
          name: faas-netes-temp-volume
        ports:
        - containerPort: 8081
          protocol: TCP
      nodeSelector:
        beta.kubernetes.io/arch: amd64
