openfaas/queueworker-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openfaas
    component: queue-worker
  name: queue-worker
  namespace: "openfaas"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-worker
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: queue-worker
    spec:
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
      imagePullSecrets:
      - name: alihangzhou
      containers:
      - name:  queue-worker
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: registry.cn-hangzhou.aliyuncs.com/byzanteam/queue-worker:0.11.0
        imagePullPolicy: Always
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
      nodeSelector:
        beta.kubernetes.io/arch: amd64
